Update build scripts in package.json to prevent automatic publishing during macOS and Windows distribution
- Modified distribution scripts for macOS and Windows to include the `--publish never` flag, ensuring that builds do not automatically publish to any repository during the packaging process.

--- a/package.json
+++ b/package.json
@@ -11,15 +11,15 @@
     "clean": "node -e \"require('fs').rmSync('dist',{recursive:true,force:true});require('fs').rmSync('release',{recursive:true,force:true});\"",
     "build:renderer": "npm run clean && webpack --mode production",
     "pack:mac": "npm run build:renderer && electron-builder --mac --dir --universal",
-    "dist:mac": "npm run build:renderer && electron-builder --mac --universal",
+    "dist:mac": "npm run build:renderer && electron-builder --mac --universal --publish never",
     "pack:mac:split": "npm run build:renderer && electron-builder --mac --dir --arm64 && electron-builder --mac --dir --x64",
-    "dist:mac:split": "npm run build:renderer && electron-builder --mac --arm64 && electron-builder --mac --x64",
+    "dist:mac:split": "npm run build:renderer && electron-builder --mac --arm64 --publish never && electron-builder --mac --x64 --publish never",
     "pack:mac:arm64": "npm run build:renderer && electron-builder --mac --dir --arm64",
     "pack:mac:x64": "npm run build:renderer && electron-builder --mac --dir --x64",
-    "dist:mac:arm64": "npm run build:renderer && electron-builder --mac --arm64",
-    "dist:mac:x64": "npm run build:renderer && electron-builder --mac --x64",
+    "dist:mac:arm64": "npm run build:renderer && electron-builder --mac --arm64 --publish never",
+    "dist:mac:x64": "npm run build:renderer && electron-builder --mac --x64 --publish never",
     "pack:win": "npm run build:renderer && electron-builder --win --dir",
-    "dist:win": "npm run build:renderer && electron-builder --win"
+    "dist:win": "npm run build:renderer && electron-builder --win --publish never"
   },
   "engines": {
     "node": ">=20.0.0"
